--- a/public_html/index.html
+++ b/public_html/index.html
@@ -40,9 +40,6 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#portfolio">Portfolio</a>
                     </li>
-                    <!-- <li class="nav-item">
-                        <a class="nav-link" href="#team">Team</a>
-                    </li> -->
                     <li class="nav-item">
                         <a class="nav-link" href="#testimonial">Testimonial</a>
                     </li>
@@ -138,8 +135,8 @@
     <!-- Service Section -->
     <section id="service">
         <div class="container">
-            <h6 class="section-subtitle text-center">Makes Happen</h6>
-            <h5 class="section-title text-center mb-6">Our Service</h5> 
+            <h6 class="section-subtitle text-center">We provide the best digital</h6>
+            <h5 class="section-title text-center mb-6">Services</h5> 
             <div class="row">
                 <div class="col-sm-6 col-md-4">
                     <div class="card mb-4">
@@ -211,7 +208,7 @@
                         <img src="assets/imgs/folio-1.jpg" alt="Accent">
                         <div class="overlay">
                             <div class="overlay-infos">
-                                <h5>Project Title</h5>
+                                <h5>App Development</h5>
                                 <a href="javascript:void(0)"><i class="ti-zoom-in"></i></a>
                                 <a href="javascript:void(0)"><i class="ti-link"></i></a>
                             </div>  
@@ -376,7 +373,8 @@
             <!-- <button type="button" class="btn btn-outline-primary play-control" data-toggle="modal" data-target="#exampleModalCenter">
               <i class="ti-control-play" ></i>
             </button> -->
-            <h6 class="section-title mt-4">Be RELAX, we are a MIND BLOWING solution provider of your business. Give us a CHANCE we will not disappoint you</h6>
+            <h6 class="section-title mt-4">Looking for the best digital agency & marketing solution?</h6>
+            <a href="#contact" class="btn btn-outline-light rounded w-lg btn-lg my-1">Contact Us</a>
 
         </div>
     </section>
@@ -490,7 +488,7 @@
                         <div class="form-group">
                             <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" required>
                         </div>
-                        <div class="form-grop">
+                        <div class="form-group">
                             <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password" required>
                         </div>
                         <div class="form-group">
@@ -535,7 +533,7 @@
                                     <a href="#portfolio">Portfolio</a>
                                 </div>
                                 <div class="col">
-                                    <a href="#testmonail">Testimonial</a>
+                                    <a href="#testimonial">Testimonial</a>
                                     <a href="#blog">Blog</a>
                                     <!-- <a href="#">Faq</a> -->
                                     <a href="#">Privacy Policy</a>                  
